# Milestone2

./: AStar results. txt  AStar.h  BFS results.txt  BFS.cpp  BFS.h  Best First Search results.txt  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS results.txt  DFS.h  FileCacheManager.h  ISearcher.h  Matrix10x10.txt  Matrix13x13.txt  Matrix16x16.txt  Matrix19x19.txt  Matrix22x22.txt  Matrix25x25.txt  Matrix28x28.txt  Matrix31x31.txt  Matrix34x34.txt  Matrix37x37.txt  MatrixSearchable.cpp  MatrixSearchable.h  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.h  ParallelServer.cpp  ParallelServer.h  Point.cpp  Point.h  PriorityQueue.h  PriorityQueueSearcher.h  README.md  Searchable.cpp  Searchable.h  SearchableSolver.cpp  (+13 more)
